SERVER-45662 Update Flow Control timeAcquiringMicros in currentOp

This patch also bumps the RamLog byte limit for log lines to be 2048
bytes per line to allow checkLog-based tests to pass as of this change.